--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,7 @@ dependencies:
     sdk: flutter
   flutter_riverpod: ^2.6.1
   flutter_svg: ^2.2.0
+  go_router: ^16.1.0
 
 dev_dependencies:
   flutter_test:
